Update README with new visual debugger and cross-validation features